fix(dividing lines): stretch tables across columns

--- a/Content/Styles/Divided/Site.scss
+++ b/Content/Styles/Divided/Site.scss
@@ -138,15 +138,15 @@ html, body {
 }  
 
 .answerContainer {
-    margin: 50px;
-  }
-  
-  .tableItem{
-    border:3px solid black;
-  }
+    margin: 50px 10px 10px 0;
+}
 
 .answerContainer table {
     width: 100.2% !important;
+}
+  
+.tableItem {
+    border:3px solid black;
 }
 
 .spanish-answer {
